@@ -1,5 +1,7 @@
 2009-03-07  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* VisualiseNeurons.cpp (VisualiseNeurons::printHelp): Updated text.
+
 	* eventcounter.cc (usage): Updated text.
 
 2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
